--- a/ncformDemo/package.json
+++ b/ncformDemo/package.json
@@ -15,6 +15,7 @@
     "@ncform/ncform-theme-elementui": "^0.1.12",
     "axios": "^0.18.0",
     "element-ui": "^2.4.6",
+    "vant": "^1.2.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
